fix(search) #94: change search page on mobile

--- a/src/pages/special/search/Search.scss
+++ b/src/pages/special/search/Search.scss
@@ -24,6 +24,10 @@
     background-color: $widget-bg;
     border-radius: $border-radius;
 
+    &:first-of-type {
+      overflow: hidden;
+    }
+
     @include clearfix();
 
     .imageLink {
